# robotics-autoresearch

./: .gitignore  CLAUDE.md  analysis.ipynb  mpc.py  prepare.py  program.md  pyproject.toml  results.tsv
