[project]
name = "robotics-autoresearch"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.5.0",
    "mujoco-warp>=0.3.0; platform_system == 'Linux'",
    "numpy",
    "matplotlib",
    "pandas",
    "jupyter",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["prepare.py", "mpc.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://pypi.nvidia.com"
name = "nvidia"
